--- a/meu-repositorio/index.html
+++ b/meu-repositorio/index.html
@@ -14,7 +14,7 @@
                 <!-- Imagem -->
             </div>
             <p>
-                Olá, amigos! Eu sou Kelvin Soares! Moro no estado do Rio Grande do Norte, sou um desenvolvedor front-end. Desenvolvi esse site apenas para facilitar o acesso aos meus projetos e estudos. É um site simples mais muito bem organizado.
+                Olá, amigos! Eu sou Kelvin Soares. Moro no estado do Rio Grande do Norte, sou um desenvolvedor front-end. Desenvolvi esse site apenas para facilitar o acesso aos meus projetos e estudos. É um site simples mais muito bem organizado.
             </p>
         </article>
     </main>
